Added center text to pie chart

--- a/ru.futurelink.rap.d3/resources/charts/piechart.css
+++ b/ru.futurelink.rap.d3/resources/charts/piechart.css
@@ -8,8 +8,14 @@ body {
 	stroke: #fff;
 }
 
-.nodatatext {
+.nodataText {
 	font: 30pt sans-serif;
 	stroke: #444;
+	fill: #aaa;
+}
+
+.centerText {
+	font: 24pt sans-serif;
+	stroke: #aaa;
 	fill: #aaa;
 }
